authn.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
#  namespace: istio-system
  namespace: onlineboutique
spec:
  mtls:
    mode: STRICT
