netpol_namespace_only.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
  - from:
    - podSelector:
        matchLabels:
          app: loadgenerator
    - namespaceSelector:
          matchLabels:
            name: istio-system  
      podSelector:
        matchLabels:
          app: istio-ingressgateway
    ports:
     - port: 8080
       protocol: TCP
  egress:
  - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: onlineboutique
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
